# rustJarm

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
examples/: jarm.rs
src/: lib.rs  main.rs
src/error/: mod.rs
tests/: test_errors.rs  test_jarm.rs  tests.rs  unit_tests.rs
