[package]
name = "rust_jarm"
version = "0.1.0"
authors = ["Hugo-C"]
edition = "2018"
license = "MIT"
description = "JARM fingerprinting in native Rust"
repository = "https://github.com/Hugo-C/rustJarm"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.27.2"
hex = "0.4"
rand = "0.8.3"
sha2 = "0.9.3"