[package]
name = "rust_jarm"
version = "0.2.1"
authors = ["Hugo-C"]
edition = "2021"
license = "MIT"
description = "JARM fingerprinting in native Rust"
repository = "https://github.com/Hugo-C/rustJarm"
readme = "README.md"
exclude = [
    ".github/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "~0.27"
hex = "~0.4"
rand = "~0.8"
sha2 = "~0.9"